fix spacing and hyperlink display

--- a/src/Components/ArticleCard/ArticleCard.css
+++ b/src/Components/ArticleCard/ArticleCard.css
@@ -2,4 +2,14 @@
   box-sizing: border-box;
   border: 3px solid black;
   padding: 10px;
+  width:17em;
+  height: 17em;
+}
+
+a:link{
+  text-decoration: none;
+}
+
+.article-text {
+  color: black;
 }
